move session related to auth tag
